syntax = "proto3";
package proto;
option go_package = "internal/infra/grpc/proto";

message Order {
    string id = 1;
    float price = 2;
    float tax = 3;
    float final_price = 4;
}

message CreateOrderRequest {
    float price = 1;
    float tax = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message RealAllOrdersRequest {}

message RealAllOrdersResponse {
    repeated Order orders = 1;
}

message ReadOrderByIdRequest {
    string id = 1;
}

message ReadOrderByIdResponse {
    Order order = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc RealAllOrders(RealAllOrdersRequest) returns (RealAllOrdersResponse);
    rpc ReadOrderById(ReadOrderByIdRequest) returns (ReadOrderByIdResponse);
}